altered some graph walker logics